# count_reads_python

./: README.md  conda.yml  pyproject.toml
count_reads/: __init__.py  lib.py
count_reads.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
count_reads/scripts/: count_reads.py
